--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -18,13 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def locateFile(X,local=True,remote=True,download=False):\n",
+    "def locateFile(X,download=False):\n",
     "    if type(X)==str:\n",
     "        opts=''\n",
-    "        if local:\n",
-    "            opts=opts+'--local '\n",
-    "        if remote:\n",
-    "            opts=opts+'--remote '\n",
     "        if download:\n",
     "            opts=opts+'--download '\n",
     "        path=os.popen('ml-prv-locate {} {}'.format(X,opts)).read().strip()\n",
